# AutoLister360

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  solution_creation_prompt.md
src/: config.py  email_sender.py  gradio.py  image_classifier.py  logging_config.py  templates.py  text_processor.py  utils.py
tests/: test_email_sender.py  test_text_processor.py
