[project]
name = "autolister360"
version = "0.1.0"
description = "an llm powered app to list car specifications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "gradio>=5.42.0",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "pydantic>=2.11.7",
]
